Fix scroll styles, fixed scrollbar for windows

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,10 +5,7 @@ body {
     letter-spacing: 0.25px;
     font-weight: light;
     color: #0D1921;
-}
-
-.intro.section {
-    flex-direction: column;
+    overflow-y: scroll;
 }
 
 .section {
@@ -18,6 +15,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.intro.section {
+    flex-direction: column;
 }
 
 .gallery .image {
@@ -31,20 +32,6 @@ body {
     position: absolute;
     right: 5vw;
     margin-top: 10vh;
-}
-
-[data-aos="fade-in"] {
-  opacity: 0;
-  transition: 0.5s all ease;
-}
-[data-aos="fade-in-long"] {
-  opacity: 0;
-  transition: 2s all ease;
-}
-[data-aos="slide-up"] {
-    line-height: 0;
-    overflow: hidden;
-    transition: 1s all ease;
 }
 
 .headline {
@@ -80,6 +67,7 @@ body {
     position: relative;
     top: -15vh;
     cursor: pointer;
+    margin-bottom: -48px;
 }
 .scrollArrows {
     margin: 0 auto;
@@ -120,4 +108,18 @@ body {
     &:nth-of-type(3) {
         animation-delay: 0.50s;
     }
+}
+
+[data-aos="fade-in"] {
+  opacity: 0;
+  transition: 0.5s all ease;
+}
+[data-aos="fade-in-long"] {
+  opacity: 0;
+  transition: 2s all ease;
+}
+[data-aos="slide-up"] {
+    line-height: 0;
+    overflow: hidden;
+    transition: 1s all ease;
 }
